Used Babylon to replace esprima

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "jsc-vim",
-  "version": "0.1.0",
-  "description": "JavaScript comment generator for VIM",
+  "version": "0.2.0",
+  "description": "JavaScript comments generator for VIM",
   "main": "index.js",
   "dependencies": {
-    "esprima": "^2.7.1",
-    "estraverse": "^4.1.1",
+    "babylon": "^6.14.1",
     "etpl": "^3.0.0"
   },
   "author": {
